fix: settings no longer shift when adding tags

--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -22,8 +22,8 @@
 /* Formats the side menu */
 .sideContainer {
     display: flex;
-    height: 90vh;
-    width: 150px;
+    height: 80vh;
+    width: 15vw;
     padding-top: 5vh;
     flex-direction: column;
     align-items: center;
@@ -37,6 +37,14 @@
     padding-top: 10px;
     padding-left: 10px;
     align-items: left;
+}
+
+.settingContainer {
+    display: flex;
+    width: 15vw;
+    flex-direction: column;
+    align-items: center;
+    background-color: darkturquoise;
 }
 
 .input {
